# videofront

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  req.txt  setup.cfg
.circleci/: config.yml
api/: models.py  urls.py
api/tests/: test_models.py
api/v1/: $  serializers.py  urls.py  utils.py  views.py
django_app_lti/: LICENSE  admin.py  models.py  settings.py  urls.py  views.py
django_app_lti/migrations/: 0001_initial.py  0002_auto_20180702_0947.py  0003_ltiresource_playlists.py
django_app_lti/tests/: test_lti_launch_view.py  test_tool_config_view.py
django_auth_lti/: LICENSE  backends.py  decorators.py  middleware.py  models.py  patch_reverse.py  timer.py  verification.py
django_auth_lti/migrations/: 0001_initial.py
env.d/: ci  development
ims_lti_py/: __init__.py  launch_params.py  outcome_request.py  outcome_response.py  request_validator.py  tool_config.py  tool_consumer.py  tool_provider.py
ltivideofront/: urls.py  views.py
ltivideofront/templates/: base.html  home.html
pipeline/: admin.py  apps.py  backend.py  cache.py  exceptions.py  managers.py  models.py  plugins.py  tasks.py  tests.py  utils.py  video.py  videoupload.py
pipeline/migrations/: 0001_initial.py  0002_auto_20160824_0640.py  0002_videotranscoding_message.py  0002_videouploadurl_playlist.py  0003_auto_20160824_0733.py  0003_videouploadurl_filename.py  0004_auto_20160809_1535.py  0004_auto_20160825_0741.py  0005_auto_20160810_1228.py  0005_auto_20160825_0819.py  0006_auto_20160905_1245.py  0007_auto_20160913_1247.py  0008_videouploadurl_origin.py  (+5 more)
requirements/: aws.txt  base.txt  tests.txt
scripts/: client.py  uploadvideo.py
transcoding/: README.md  backend_extra.py  tasks_extra.py  transcode.py
video/: apps.py  models.py  tests.py
videofront/: __init__.py  celery.py  celery_videofront.py  settings.py  settings_prod_sample.py  settings_prod_sample_aws.py  settings_prod_sample_local.py  urls.py  wsgi.py
(+51 files in other folders)
