;;
;; VideoFront package
;;
[metadata]
name = videofront
version = 0.1.0
description = A FUN LTI video provider
long_description = file: README.md
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/videofront
license= AGPL 3.0
keywords = Django, Django Rest Framework, API, Video, LTI
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 1.9
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = true
install_requires =
    Django==1.10
    celery==3.1.23
    django-celery==3.1.17
    django-filter==0.14.0
    djangorestframework==3.4.5
    django-rest-swagger==2.0.5
    Pillow==3.3.1
    Markdown==2.6.6
    psycopg2==2.7.5
    pycaption==1.0.0

packages = find:
zip_safe = False

[options.extras_require]
aws =
    boto3==1.3.1
dev =
    coverage
    factory-boy==2.7.0
    fake-factory==0.7.4
    ipdb
    ipython
    ipython-genutils
    wheel
test =
    mock
    pytest
    pytest-cov
    pytest-django
quality =
    black
    flake8
    isort
    pylint
    pylint-django

[options.packages.find]
exclude =
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    venv,
    __pycache__,
    node_modules,


[isort]
known_django=django
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip_glob=/app/node_modules/**/*

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    api
    contrib
    pipeline
    transcoding
    videofront
